<resources>
    <string name="app_name">Accelerometer and GPS</string>
    <string name="_0">0</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="lat">Lat</string>
    <string name="lon">Long</string>
    <string name="require_permission">Need access to location</string>

</resources>
