<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.ehar.SensorExample.MainActivity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer"
        android:layout_marginBottom="@dimen/default_margin"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2">

        <TextView
            android:id="@+id/accel_x"
            style="@style/accel_gps_value"
            android:layout_gravity="right"/>

        <TextView
            android:id="@+id/accel_x_label"
            style="@style/accel_gps_label"
            android:text="@string/x" />

        <TextView
            android:id="@+id/accel_y"
            style="@style/accel_gps_value"
            android:gravity="right"/>

        <TextView
            android:id="@+id/accel_y_label"
            style="@style/accel_gps_label"
            android:text="@string/y" />

        <TextView
            android:id="@+id/accel_z"
            style="@style/accel_gps_value"
            android:layout_gravity="right"/>

        <TextView
            android:id="@+id/accel_z_label"
            style="@style/accel_gps_label"
            android:text="@string/z" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_coordinates"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"/>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2">

        <TextView
            android:id="@+id/gps_lat"
            style="@style/accel_gps_value" />

        <TextView
            android:id="@+id/gps_lat_label"
            style="@style/accel_gps_label"
            android:text="@string/lat"/>

        <TextView
            android:id="@+id/gps_lon"
            style="@style/accel_gps_value" />

        <TextView
            android:id="@+id/gps_lon_label"
            style="@style/accel_gps_label"
            android:text="@string/lon"/>

    </GridLayout>

</LinearLayout>
